core/unpackaged/main/default/objects/ZVC__Session_History__c/ZVC__Session_History__c.object-meta.xml
<CustomObject>
    <label>Session History</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Session Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>