core/unpackaged/main/default/objects/ZVC__Session_History__c/fields/ZVC__Account__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Call_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>