core/unpackaged/main/default/objects/ZVC__Session_History__c/fields/ZVC__Agent_Email__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Agent_Email__c</fullName>
    <label>Agent Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>