core/unpackaged/main/default/objects/ZVC__Session_History__c/fields/ZVC__Agent_Phone__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Agent_Phone__c</fullName>
    <label>Agent Phone</label>
    <type>Phone</type>
</CustomField>