core/unpackaged/main/default/objects/ZVC__Session_History__c/fields/ZVC__Agent_User_Email__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Agent_User_Email__c</fullName>
    <label>Agent User Email</label>
    <type>Email</type>
</CustomField>