core/unpackaged/main/default/objects/ZVC__Session_History__c/fields/ZVC__Answer_Time__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Answer_Time__c</fullName>
    <label>Answer Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>