core/unpackaged/main/default/objects/ZVC__Session_History__c/fields/ZVC__Campaign__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>Call_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>