core/unpackaged/main/default/objects/ZVC__Session_History__c/fields/ZVC__Case__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Call_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>