core/unpackaged/main/default/objects/ZVC__Session_History__c/fields/ZVC__Channel__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Voice</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>