core/unpackaged/main/default/objects/ZVC__Session_History__c/fields/ZVC__Chat_Transcript__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Chat_Transcript__c</fullName>
    <label>Chat Transcript</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>