core/unpackaged/main/default/objects/ZVC__Session_History__c/fields/ZVC__Contact__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Call_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>