core/unpackaged/main/default/objects/ZVC__Session_History__c/fields/ZVC__Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Contact_Phone__c</fullName>
    <label>Contact Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>