core/unpackaged/main/default/objects/ZVC__Session_History__c/fields/ZVC__Disposition__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Disposition__c</fullName>
    <label>Disposition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>