core/unpackaged/main/default/objects/ZVC__Session_History__c/fields/ZVC__Duration__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Duration__c</fullName>
    <label>Duration</label>
    <length>8</length>
    <type>Text</type>
</CustomField>