core/unpackaged/main/default/objects/ZVC__Session_History__c/fields/ZVC__Engagement_ID__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Engagement_ID__c</fullName>
    <label>Engagement ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>