core/unpackaged/main/default/objects/ZVC__Session_History__c/fields/ZVC__Existing_Task__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Existing_Task__c</fullName>
    <label>Existing Task</label>
    <length>20</length>
    <type>Text</type>
</CustomField>