core/unpackaged/main/default/objects/ZVC__Session_History__c/fields/ZVC__From_Session_History__c.field-meta.xml
<CustomField>
    <fullName>ZVC__From_Session_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Session History</label>
    <referenceTo>ZVC__Session_History__c</referenceTo>
    <relationshipLabel>Session Histories</relationshipLabel>
    <relationshipName>Session_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>