core/unpackaged/main/default/objects/ZVC__Session_History__c/fields/ZVC__is_Missed__c.field-meta.xml
<CustomField>
    <fullName>ZVC__is_Missed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Missed</label>
    <type>Checkbox</type>
</CustomField>