core/unpackaged/main/default/objects/ZVC__Session_History__c/fields/ZVC__Is_Related_To_Dismissed__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Is_Related_To_Dismissed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Related To Dismissed</label>
    <type>Checkbox</type>
</CustomField>