core/unpackaged/main/default/objects/ZVC__Session_History__c/fields/ZVC__Is_Task_Connected__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Is_Task_Connected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Task Connected</label>
    <type>Checkbox</type>
</CustomField>