core/unpackaged/main/default/objects/ZVC__Session_History__c/fields/ZVC__is_Transfer_To_Queue__c.field-meta.xml
<CustomField>
    <fullName>ZVC__is_Transfer_To_Queue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Transfer To Queue</label>
    <type>Checkbox</type>
</CustomField>