core/unpackaged/main/default/objects/ZVC__Session_History__c/fields/ZVC__Lead__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Call_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>