core/unpackaged/main/default/objects/ZVC__Session_History__c/fields/ZVC__Notes__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>