core/unpackaged/main/default/objects/ZVC__Session_History__c/fields/ZVC__Queue__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Queue__c</fullName>
    <label>Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>