core/unpackaged/main/default/objects/ZVC__Session_History__c/fields/ZVC__Recording__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Recording__c</fullName>
    <label>Recording</label>
    <type>Url</type>
</CustomField>