core/unpackaged/main/default/objects/ZVC__Session_History__c/fields/ZVC__Smart_Notes__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Smart_Notes__c</fullName>
    <label>Smart Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>