core/unpackaged/main/default/objects/ZVC__Session_History__c/fields/ZVC__Start_Time__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Start_Time__c</fullName>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>