core/unpackaged/main/default/objects/ZVC__Session_History__c/fields/ZVC__Task_ID__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Task_ID__c</fullName>
    <label>Task ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>