core/unpackaged/main/default/objects/ZVC__Session_History__c/fields/ZVC__Type__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>