core/unpackaged/main/default/objects/ZVC__Session_History__c/fields/ZVC__User__c.field-meta.xml
<CustomField>
    <fullName>ZVC__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Call_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>