core/unpackaged/main/default/objects/ZVC__Session_History__c/fields/ZVC__Warp_Up_Time__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Warp_Up_Time__c</fullName>
    <label>Wrap Up Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>