core/unpackaged/main/default/objects/ZVC__Session_History__c/listViews/ZVC__All.listView-meta.xml
<ListView>
    <fullName>ZVC__All</fullName>
    <columns>NAME</columns>
    <columns>ZVC__Call_ID__c</columns>
    <columns>ZVC__Channel__c</columns>
    <columns>ZVC__Contact_Phone__c</columns>
    <columns>ZVC__Recording__c</columns>
    <columns>ZVC__User__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>ZVC__Start_Time__c</columns>
    <columns>ZVC__End_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>